# HOpenGL

./: .gitignore  HOpenGL.cabal  Makefile  README.md
resources/: fragment.shader  vertex.shader
src/: Events.hs  Main.hs  Model.hs  Update.hs  Utils.hs  View.hs  Window.hs
src/Graphics/: ArrayObjects.hs  Buffers.hs  Object.hs  Renderable.hs  Shaders.hs
src/Objects/: Cube.hs  Triangle.hs
