name:                HOpenGL
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              San Gillis
maintainer:          gillis.san@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-dir:            resources
data-files:          *.shader

executable HOpenGL
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base         >=4.6 && <4.7,
                       GLFW-b       == 1.4.6,
                       stm          == 2.4.2,
                       mtl          == 2.1.2, 
                       transformers == 0.3.0.0,
                       OpenGL       == 2.9.2.0,
                       bytestring   == 0.10.0.2,
                       array        == 0.4.0.1
  default-language:    Haskell2010
